--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
-    "build": "nuxt build --exec babel-node",
+    "build": "cross-env NODE_ENV=production nuxt build --exec babel-node",
     "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --fix --ignore-path .gitignore ."
